--- a/RLRP.DataAccess.InMemory/RLRP.DataAccess.InMemory.csproj
+++ b/RLRP.DataAccess.InMemory/RLRP.DataAccess.InMemory.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AreaRepository.cs" />
     <Compile Include="ProjectRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
