Implemented BaseEntity and generic repository

--- a/RLRP.DataAccess.InMemory/RLRP.DataAccess.InMemory.csproj
+++ b/RLRP.DataAccess.InMemory/RLRP.DataAccess.InMemory.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AreaRepository.cs" />
+    <Compile Include="InMemoryRepository.cs" />
     <Compile Include="ProjectRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
