--- a/RLRP.Core/RLRP.Core.csproj
+++ b/RLRP.Core/RLRP.Core.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Models\Area.cs" />
+    <Compile Include="Models\BaseEntity.cs" />
     <Compile Include="Models\Project.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\ProjectManagerViewModel.cs" />
